--- a/app/src/main/res/layout/tab_home.xml
+++ b/app/src/main/res/layout/tab_home.xml
@@ -16,8 +16,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:contentDescription=""
-        tools:ignore="ContentDescription"
-        android:onClick="Transdep"/>
+        tools:ignore="ContentDescription" />
 
     <ImageButton
         android:id="@+id/ibFly"
