--- a/app/src/main/res/layout/transdep_front.xml
+++ b/app/src/main/res/layout/transdep_front.xml
@@ -159,7 +159,7 @@
         android:layout_alignStart="@+id/textView4"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/etPassenger"
