--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorPrimaryDark">#323232</color>
     <color name="White">#ffffff</color>
     <color name="Black">#000000</color>
+    <color name="start_stop_spinner">#BBDDFC</color>
 
 </resources>
