--- a/app/src/main/res/layout/tab_more.xml
+++ b/app/src/main/res/layout/tab_more.xml
@@ -4,9 +4,8 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/logout"
-        android:onClick="Logout"/>
+        android:text="@string/logout"/>
 </LinearLayout>
