--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,16 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
+    <style name="listItemDirectionName">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="listItemSmallTextView">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">10dp</item>
+    </style>
+
 </resources>
