--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -2,25 +2,94 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true">
 
-    <TextView
-        android:id="@+id/textView"
+    <RelativeLayout
+        android:background="@color/colorAccent"
+        android:id="@+id/topPanel"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:textSize="60dp"
-        android:gravity="center"
-        android:background="#00aaff"
-        android:text="Text"/>
+        android:layout_height="wrap_content"
+        android:padding="5dp">
+        <View
+            android:id="@+id/color1"
+            android:layout_margin="1dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="@color/seat_color_green"/>
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:textSize="13dp"
+            android:text="@string/seat_text_green"
+            android:layout_alignTop="@+id/color1"
+            android:layout_toEndOf="@+id/color1" />
+        <View
+            android:id="@+id/color2"
+            android:layout_below="@+id/color1"
+            android:layout_margin="1dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="@color/seat_color_gray"/>
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13dp"
+            android:layout_marginLeft="5dp"
+            android:text="@string/seat_text_gray"
+            android:layout_alignBottom="@+id/color2"
+            android:layout_toEndOf="@+id/color2" />
+
+        <View
+            android:id="@+id/color3"
+            android:layout_below="@+id/color2"
+            android:layout_margin="1dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="@color/seat_color_yellow"/>
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13dp"
+            android:layout_marginLeft="5dp"
+            android:text="@string/seat_text_yellow"
+            android:layout_below="@+id/color2"
+            android:layout_toEndOf="@+id/color3" />
+        <View
+            android:id="@+id/color4"
+            android:layout_below="@+id/color3"
+            android:layout_margin="1dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="@color/seat_color_orange"/>
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/seat_text_orange"
+            android:textSize="13dp"
+            android:layout_marginLeft="5dp"
+            android:layout_alignTop="@+id/color4"
+            android:layout_toEndOf="@+id/color4" />
+    </RelativeLayout>
+
+
     <TextView
         android:id="@+id/horizontal_line"
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/topPanel"
         android:background="#000000"/>
+
+
     <ScrollView
+        android:id="@+id/ScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/horizontal_line">
@@ -29,11 +98,21 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/root_bus"
-            android:background="@drawable/bus_test"
+            android:background="@drawable/bus_big"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true">
 
         </RelativeLayout>
     </ScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_send"
+        android:layout_marginEnd="36dp"
+        android:layout_below="@+id/horizontal_line"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="25dp" />
 </RelativeLayout>
