--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -98,7 +98,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/root_bus"
-            android:background="@drawable/bus_big"
+            android:background="@drawable/bus_medium"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true">
