--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -111,8 +111,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_send"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginTop="12dp"
         android:layout_below="@+id/horizontal_line"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="25dp" />
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
